# wasm-instrument

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  common.c  common.cpp  common.h  encode.cpp  format.sh  inspect.cpp  inst_internal.cpp  inst_internal.h  instructions.h  instrument  instrument.cpp  instrument_lib.cmake  ir.c  ir.cpp  ir.h  main.c  main.cpp  opcode_table.c  parse.c  parse.cpp  parse.h  routines.cpp  routines.h  run.sh  string.c  string.h  test-instlib.c  test-leb.cpp  test.c  test.h  views.cpp  views.h  wasmdefs.h  wasmops.h  weedis.c  (+2 more)
api/: inspections.h  instrument_c_api.cpp  routines.h
bench/: br_table.wat  drop.wat  drop2.wat  f64_add.wat  f64_const.wat  f64_div.wat  f64_eq.wat  f64_ge.wat  f64_gt.wat  f64_select.wat  f64_store.wat  f64_sub.wat  f64_truncu.wat  global_set.wat  i32_clz.wat  i32_convertu.wat  i32_divs.wat  i32_eqz.wat  i32_geu.wat  i32_gts.wat  i32_les.wat  i32_load8s.wat  i32_lts.wat  i32_ltu.wat  i32_popcnt.wat  i32_remargs.wat  i32_rems.wat  i32_rotl.wat  i32_rotr.wat  i32_select.wat  i32_sext16.wat  i32_shl.wat  i32_xor.wat  k.wat  local_getset.wat  local_ops.wat  loop.wat  putd.wat
common/: common.c  common.h  ir.h
eval/: gen_profs.sh  process.ipynb
inc/: BS_thread_pool_light.hpp  builder.h  common.h  inst_internal.h  instructions.h  ir.h  ir_defs.h  parse.h  views.h  wasmdefs.h
lib/: loop_count.cpp
micro/: test-instlib.c
routines/: func_weight.cpp  loop_count.cpp  memaccess.cpp  opcode_count.cpp  routine_common.h  sample.cpp
runtime/: requirements.txt  run.py  runtime.py  test.py
samples/: args.wat  br.wat  br_if.wat  build.sh  call.wat  call_indirect.wat  f64_le.wat  f64_load.wat  f64_lt.wat  f64_mul.wat  f64_ne.wat  f64_truncs.wat  global_get.wat  i32_add.wat  i32_and.wat  i32_const.wat  i32_converts.wat  i32_ctz.wat  i32_divargs.wat  i32_divargu.wat  i32_divu.wat  i32_eq.wat  i32_ges.wat  i32_gtu.wat  i32_leu.wat  i32_load.wat  i32_load16s.wat  i32_load16u.wat  i32_load8u.wat  i32_mul.wat  i32_ne.wat  i32_or.wat  i32_remu.wat  i32_sext8.wat  i32_shrs.wat  (+5 more)
(+262 files in other folders)
